name:                hreddit
version:             0.1.0.0
synopsis:            A Reddit command line client
description:         A base simple command line Reddit client
homepage:            https://github.com/rodrigosetti/hreddit
license:             MIT
license-file:        LICENSE
author:              Rodrigo Setti
maintainer:          rodrigosetti@gmail.com
copyright:           2013 Rodrigo Setti
category:            Web
build-type:          Simple
tested-with:         GHC == 7.6.3
cabal-version:       >=1.8
exposed-modules:     System.Console.CommandLoop,
                     Network.Reddit,
                     Network.HTTP.Utils


executable hreddit
  ghc-options:       -Wall
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     base >=4.5 && < 5,
                     readline ==1.*,
                     mtl ==2.*,
                     network==2.*,
                     HTTP==4000.2.*,
                     bytestring >=0.9 && < 0.11,
                     aeson==0.6.*,
                     process >= 1.1.0.0,
                     directory >=1.0.0.0

